Fixed flux normalization and deployment issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,8 +29,8 @@
       <p>{{ result }}</p>
     {% endif %}
 
-    {% if plot_url %}
-      <img src="{{ plot_url }}" alt="Light Curve" width="800">
+    {% if plot_path %}
+      <img src="{{ plot_path }}" alt="Light Curve" width="800">
     {% endif %}
 
     {% if planets and planets|length > 0 %}
