--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class="box">
     <h1>Exoplanet Hunter</h1>
-    <form action="/result" method="POST" onsubmit="showloading()">
+    <form  method="POST" onsubmit="showloading()">
       <input type="text" name="star_id" placeholder="Enter Star ID (e.g. KIC 11446443)" required>
       <input type="text" name="threshold" placeholder="Threshold (optional, e.g. 0.995)" style="width:150px;">
       <div id="Loadingmessage" style="display:none"; color:blue; font-weight:bold;>
