fixed background image

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Exoplanet Hunter</title>
   <style>
-    body { font-family: Arial, sans-serif; text-align:center; padding:40px; background-image: url("{{url_for('static',filename='plots\ astro_picture.jpg')}}") ;background-size: cover; background-repeat:no-repeat; background-position: center;   color:rgb(247, 60, 60); }
+    body { font-family: Arial, sans-serif; text-align:center; padding:40px; background-image: url("{{url_for('static',filename='plots/astro_picture.jpg')}}") ;background-size: cover; background-repeat:no-repeat; background-position: center;   color:rgb(247, 60, 60); }
     input { padding:8px; width:220px; }
     button { padding:8px 16px; margin-left:8px; }
     .box { background:white; display:inline-block; padding:20px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.08); }
